[package]
name = "butler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.10", features = ["ws"] }
clap = { version = "3.2.7", features = ["derive"] }
futures = "0.3.21"
html_editor = "0.5.1"
notify = "4.0.17"
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["fs"] }
